--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "power-assert": "^1.6.1",
     "prettier": "^1.18.2",
     "react": "^16.3.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
     "semantic-release": "^15.13.18",
     "sinon": "^7.3.2"
   },
