--- a/package.json
+++ b/package.json
@@ -89,5 +89,19 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/alibaba-fusion/field.git"
+  },
+  "release": {
+    "plugins": [
+      ["@semantic-release/commit-analyzer", {
+        "releaseRules": [
+          {"type": "typescript", "release": "patch"},
+          {"type": "revert", "release": "patch"}
+        ],
+        "parserOpts": {
+          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
+        }
+      }
+    ],
+    "@semantic-release/release-notes-generator", "@semantic-release/npm", "@semantic-release/github"]
   }
 }
