--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "component"
   ],
   "dependencies": {
-    "@alifd/validate": "^1.1.1",
+    "@alifd/validate": "^1.1.2",
     "prop-types": "^15.5.8"
   },
   "devDependencies": {
@@ -92,16 +92,30 @@
   },
   "release": {
     "plugins": [
-      ["@semantic-release/commit-analyzer", {
-        "releaseRules": [
-          {"type": "typescript", "release": "patch"},
-          {"type": "revert", "release": "patch"}
-        ],
-        "parserOpts": {
-          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "releaseRules": [
+            {
+              "type": "typescript",
+              "release": "patch"
+            },
+            {
+              "type": "revert",
+              "release": "patch"
+            }
+          ],
+          "parserOpts": {
+            "noteKeywords": [
+              "BREAKING CHANGE",
+              "BREAKING CHANGES"
+            ]
+          }
         }
-      }
-    ],
-    "@semantic-release/release-notes-generator", "@semantic-release/npm", "@semantic-release/github"]
+      ],
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      "@semantic-release/github"
+    ]
   }
 }
