--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
   "homepage": "https://unpkg.com/@alifd/field@1.6.8/build/index.html",
   "bugs": "https://github.com/alibaba-fusion/field/issues",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
