--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,13 @@
 {
     "trailingComma": "es5",
     "tabWidth": 4,
-    "printWidth": 120,
     "semi": true,
     "singleQuote": true,
     "overrides": [
         {
-            "files": "*.d.ts",
+            "files": "package.json",
             "options": {
-                "parser": "typescript"
+                "tabWidth": 2
             }
         }
     ]
