build: use cypress to test and use tsc to build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,21 @@
 {
-  "compilerOptions": {
-      "target": "ES6",
-      "lib": ["DOM", "DOM.Iterable", "ESNext"],
-      "module": "CommonJS",
-      "outDir": "lib",
-      "moduleResolution": "Node",
-      "experimentalDecorators": true,
-      "declaration": true,
-      "allowJs": true,
-      "downlevelIteration": true,
-      "noImplicitAny": true,
-      "strictNullChecks": true,
-      "skipLibCheck": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "isolatedModules": false,
-      "importHelpers": true
-  },
-  "include": ["src"]
+    "compilerOptions": {
+        "target": "ES2017",
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
+        "module": "ESNext",
+        "moduleResolution": "Node",
+        "experimentalDecorators": true,
+        "allowJs": false,
+        "declaration": true,
+        "jsx": "react",
+        "downlevelIteration": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "isolatedModules": false,
+        "importHelpers": true,
+    },
+    "include": ["src", "test"],
 }
