--- a/.eslintrc
+++ b/.eslintrc
@@ -9,15 +9,27 @@
         "plugin:@typescript-eslint/recommended",
         "prettier"
     ],
-    "plugins": ["@typescript-eslint"],
+    "plugins": ["@typescript-eslint", "eslint-plugin-tsdoc"],
+    "overrides": [
+        {
+            "files": ["./test/**/*.ts", "./test/**/*.tsx"],
+            "extends": ["plugin:cypress/recommended"],
+            "plugins": ["cypress"]
+        }
+    ],
     "rules": {
+        "tsdoc/syntax": "error",
         "valid-jsdoc": "off",
         "max-statements": "off",
         "max-len": "off",
-        "import/prefer-default-export": 0,
+        "import/prefer-default-export": "off",
         "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": "warn",
+        "@typescript-eslint/no-unused-vars": ["warn", {"ignoreRestSiblings": true}],
         "no-use-before-define": "off",
-        "@typescript-eslint/no-use-before-define": "error"
+        "react/no-multi-comp": "off",
+        "react/jsx-filename-extension": ["error", { "extensions": [".tsx", ".jsx"] }],
+        "@typescript-eslint/no-use-before-define": "error",
+        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/no-this-alias": "warn"
     }
 }
