--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
   "name": "@alifd/field",
-  "version": "1.7.0",
+  "version": "2.0.0",
   "description": "Fields can be used to manage data when it comes to form data manipulation and validation. After being associated with a component, the form data can be automatically written back, read, and verified.",
   "files": [
     "demo/",
+    "es/",
     "lib/",
-    "build/",
-    "types/"
+    "build/"
   ],
   "main": "lib/index.js",
-  "types": "types/index.d.ts",
+  "module": "es/index.js",
   "stylePath": "style.js",
   "scripts": {
     "start": "build-scripts dev",
-    "build": "build-scripts build",
+    "build": "npm run build:demo && npm run build:es && npm run build:lib",
+    "build:demo": "build-scripts build",
+    "build:es": "rm -rf es && tsc -p ./tsconfig.build.json --outDir es --module esnext",
+    "build:lib": "rm -rf lib && tsc -p ./tsconfig.build.json --outDir lib --module commonjs",
     "prepublishOnly": "npm run build",
-    "test": "build-scripts test",
-    "precommit": "lint-staged",
-    "eslint": "eslint '@(src|test)/**/*.ts'"
+    "test": "cypress run --component -b chrome",
+    "test:head": "cypress open --component -b chrome",
+    "precommit": "lint-staged"
   },
   "lint-staged": {
-    "@(src|scripts|docs/*/demo)/**/*.@(js|jsx)": [
-      "prettier --write"
+    "@(src|test)/**/*.@(ts|tsx)": [
+      "eslint"
     ],
-    "@(src|scripts|docs/*/demo)/**/*.@(js|jsx|md)": [
-      "eslint",
+    "**/*.@(js|ts|tsx|json)": [
+      "prettier --write",
       "git add"
     ]
   },
@@ -39,8 +42,8 @@
     "component"
   ],
   "dependencies": {
-    "@alifd/validate": "^2.0.0",
-    "prop-types": "^15.5.8"
+    "@alifd/validate": "^2.0.1",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@alib/build-scripts": "^0.1.3",
@@ -48,35 +51,40 @@
     "@alifd/next": "^1.15.12",
     "@commitlint/cli": "^8.1.0",
     "@types/chai": "^4.3.11",
-    "@types/jest": "^26.0.24",
     "@types/react": "^16.14.56",
     "@types/react-dom": "^16.9.24",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "@vitejs/plugin-react": "^4.2.1",
     "build-plugin-component": "^1.0.0",
     "build-plugin-fusion": "^0.1.0",
     "build-plugin-moment-locales": "^0.1.0",
     "chai": "^4.4.1",
+    "cypress": "^13.6.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "es6-promise-polyfill": "^1.2.0",
-    "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-markdown": "^1.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "husky": "^3.0.0",
     "lint-staged": "^9.2.0",
     "mocha": "^6.1.4",
     "moment": "^2.24.0",
     "prettier": "^3.2.4",
+    "prop-types": "^15.8.1",
     "react": "^16.3.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "semantic-release": "^17.2.3",
     "sinon": "^16.1.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite": "^4.5.2"
   },
   "componentConfig": {
     "name": "field",
@@ -85,7 +93,7 @@
       "表单"
     ]
   },
-  "homepage": "https://unpkg.com/@alifd/field@1.7.0/build/index.html",
+  "homepage": "https://unpkg.com/@alifd/field@2.0.0/build/index.html",
   "bugs": "https://github.com/alibaba-fusion/field/issues",
   "publishConfig": {
     "access": "public",
