chore: consistent type exports/imports and add eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
         "node": true
     },
     "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "project": "./tsconfig.json"
+    },
     "extends": [
         "@alifd/eslint-config-next",
         "plugin:@typescript-eslint/recommended",
@@ -30,6 +33,8 @@
         "react/jsx-filename-extension": ["error", { "extensions": [".tsx", ".jsx"] }],
         "@typescript-eslint/no-use-before-define": "error",
         "@typescript-eslint/no-explicit-any": "warn",
-        "@typescript-eslint/no-this-alias": "warn"
+        "@typescript-eslint/no-this-alias": "warn",
+        "@typescript-eslint/consistent-type-exports": "warn",
+        "@typescript-eslint/consistent-type-imports": "warn"
     }
 }
